added banner section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,45 @@
                 <li><a class="bg-[#FA8405] px-5 py-3 rounded-md text-[#191718] font-semibold" href="">Donate</a></li>
             </ul>
             <p class="sm:hidden"><i class="fa-solid fa-bars"></i></p>
-
-
         </nav>
+        <section class="container grid grid-cols-2 justify-between mx-auto text-white">
+          <div>
+            <h1 class="font-bold text-6xl pt-36 leading-tight">Experience a journey of <br> a thousand miles with <br>just a single page</h1>
+            <p class="text-lg my-10 capitalize">join us exploring the most exciting adventures from the <br> world you have ever felt before</p>
+            <div class="flex gap-10 text-lg">
+              <button class="bg-[#FA8405] px-9 py-3 rounded-md text-[#191718] font-semibold">Get Started</button>
+              <button class="px-5 py-3 rounded-md text-[#ffffff] font-semibold hover:bg-[#FA8405] hover:border-none border rounded-md"><i class="fa-regular fa-circle-play"></i>
+              <span>Learn More</span></button>
+            </div>
+            <div class="flex items-center mt-20 gap-5">
+              <h3 class="font-semibold pr-5 border-r-2">Contributors:</h3>
+
+              <div class="flex justify-center items-center gap-5 opacity-50">
+                  <div class="">
+                      <img class="w-1/2" src="./images/brand-01.png" alt="" />
+                  </div>
+                  <div class="">
+                      <img class="w-1/2" src="./images/brand-02.png" alt="" />
+                  </div>
+
+                  <div class="">
+                      <img class="w-1/2" src="./images/brand-03.png" alt="" />
+                  </div>
+                  <div class="">
+                      <img class="w-1/2" src="./images/brand-04.png" alt="" />
+                  </div>
+              </div>
+          </div>
+
+          </div>
+          <div>
+            <div class="relative">
+              <img class="w-2/3 absolute -top-56 right-0 -z-10" src="./images/bg-banner.png" alt="">
+            </div>
+
+          </div>
+
+        </section>
     </header>
 </body>
 </html>
